# PythonChalenge

./: Explicação.md  README.md  pyproject.toml
pythonchalenge/Desafio 00/: explicação.md
pythonchalenge/Desafio 01/: desafio.py  explicação.md
pythonchalenge/Desafio 02/: Desafio02.py  Explicação.md  desafio.py
pythonchalenge/Desafio 03/: Desafio03.py  Explicação.md
pythonchalenge/Desafio 04/: Explicação.md
pythonchalenge/Desafio 05/: Desafio05.py  Explicação.md
pythonchalenge/Desafio 06/: Explicação.md
pythonchalenge/Desafio 07/: desafio07.py
