[tool.poetry]
name = "pythonchalenge"
version = "0.1.0"
description = ""
authors = ["Mth-Amorim <65774161+Mth-Amorim@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
